--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+body {
+  background: #CCC;
+}
+
 .App {
   text-align: center;
+  padding-bottom: 30px;
+  background:#CCC;
 }
 
 .App-logo {
@@ -9,7 +15,7 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 200px;
   padding: 20px;
   color: white;
 }
